example/secondfile/objects/DHStatus_Billing_Update_Details__c.object
<CustomObject>
    <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details</description>
    <fields>
        <fullName>Access_Billing_Details__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details-Circuit Billing Details-Access Billing Details</description>
        <label>Access Billing Effective Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Access_DiscountEffectiveDate__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details-Circuit Billing Details-Competitive Access DiscountEffectiveDate</description>
        <label>Competitive Access Discount Effective Dt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatusUpdateDealHashDetailsID__c</fullName>
        <formula>DHStatus_Update_IDH__r.DHStatus_Update_Deal_Hash_Details__r.Id</formula>
        <label>DHStatusUpdateDealHashDetailsID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatusUpdateDealHashPremiseNumber__c</fullName>
        <formula>DHStatus_Update_IDH__r.DHStatus_Update_Deal_Hash_Details__r.RDS_Premise_Details_For_DHStatus__r.Premise_Number__c</formula>
        <label>DHStatusUpdateDealHashPremiseNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_IDH_Data_Type__c</fullName>
        <formula>DHStatus_Update_IDH__r.Data_Type__c</formula>
        <label>DHStatus IDH Data Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Update_Deal_Hash_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DHStatus - Update Deal Hash Details</label>
        <referenceTo>DHStatus_Update_Deal_Hash_Details__c</referenceTo>
        <relationshipLabel>DHStatus-Billing Update Details</relationshipLabel>
        <relationshipName>DHStatus_Billing_Update_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DHStatus_Update_IDH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DHStatus – Update IDH</label>
        <referenceTo>DHStatus_Update_IDH__c</referenceTo>
        <relationshipLabel>DHStatus-Billing Update Details</relationshipLabel>
        <relationshipName>DHStatus_Billing_Update_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GRID_Premise_ID__c</fullName>
        <formula>DHStatus_Update_Deal_Hash_Details__r.GRID_Premise_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GRID Premise ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedTimeStamp__c</fullName>
        <label>Last Modified Time Stamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Billing Update Details</label>
    <nameField>
        <displayFormat>BUD-{00000}</displayFormat>
        <label>DHStatus-Billing Update Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Billing Update Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>